k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-filex-backend
  namespace: default
  labels:
    app: kube-filex
    component: backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: kube-filex
    component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: kube-filex
  namespace: default
  labels:
    app: kube-filex
    component: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: kube-filex
    component: frontend
